--- a/new_assembly/dev/scss/vars.scss
+++ b/new_assembly/dev/scss/vars.scss
@@ -1,26 +1,27 @@
 //- =================== GOOGLE FONTS ======================
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 // =================== VARIABLES CSS ====================== //
 
 $header-height: 3rem;
 
-$hue-color: rgba(0, 0, 0, 0.3);
-$black-color: rgba(0, 0, 0, 0.3);
-$black-color-alt: rgba(0, 0, 0, 0.5);
-$title-color: rgba(0, 0, 0, 0.3);
-$text-color: rgba(0, 0, 0, 0.5);
-$text-color-light: rgba(0, 0, 0, 0.3);
+$hue-color: rgba(0, 0, 0, 0.5);
+$black-color: rgba(30, 30, 30, 0.5);
+$black-color-alt: rgba(100, 100, 100, 0.250);
+$title-color: rgb(175, 175, 175);
+$title-color-alt: rgba(175, 175, 175, 0.150);
+$text-color: rgb(135, 135, 135);
+$text-color-light: rgba(255, 255, 255, 0.5);
 $white-color: #fff;
-$body-color: rgba(0, 0, 0, 0.3);
-$container-color: rgba(0, 0, 0, 0.3);
-$text-gradient: rgba(0, 0, 0, 0.3);
-$scroll-thumb-color: rgba(0, 0, 0, 0.3);
-$scroll-thumb-color-alt: rgba(0, 0, 0, 0.3);
+$body-color: #000;
+$container-color: rgba(80, 80, 80, 0.3);
+$text-gradient: rgba(255, 255, 255, 0.6);
+$scroll-thumb-color: rgba(230, 230, 230, 0.2);
+$scroll-thumb-color-alt: rgba(250, 250, 250, 0.3);
 
 // =================== FONTS CSS ====================== //
 
-$body-font: 'Poppins', sans-serif;
+$body-font: 'Roboto', sans-serif;
 $biggest-font-size: 5rem;
 $bigger-font-size: 3.5rem;
 $big-font-size: 2rem;
@@ -117,7 +118,8 @@ img {
 }
 
 .section__title {
-    font-size: $bigger-font-size;
+    // font-size: $bigger-font-size;
+    font-size: $big-font-size;
     text-align: center;
     margin-bottom: $mb-2-5;
 }
